tests/fixtures/negative/performance/UnnecessaryTypeCasting.kt
package performance

fun process() {
    val x: Any = "hello"
    val y = x as String
    println(y)
}
